<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bacground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <Switch
        android:id="@+id/incrementSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="10sp" />

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="36sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decreaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-1" />

        <Button
            android:id="@+id/increaseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="+1" />
    </LinearLayout>

    <EditText
        android:id="@+id/inputEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/inputEditText"
        android:inputType="number"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF" />

    <!-- Nowy LinearLayout, aby umieścić przyciski Reset i Ustaw licznik obok siebie -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setButton" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/resetButton" />

    </LinearLayout>
</LinearLayout>
