<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bacground"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/PhoneEdit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#0D0C0C"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Phonebtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="#FF0000"
        android:backgroundTint="#000000"
        android:text="@string/buttonPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <EditText
        android:id="@+id/searchedit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#0B0A0A"
        android:ems="10"
        android:inputType="text"
        android:textColor="#0E0E0E"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PhoneEdit" />

    <EditText
        android:id="@+id/linkedit"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#0D0C0C"
        android:ems="10"
        android:inputType="text"
        android:textColor="#0D0C0C"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchedit" />

    <Button
        android:id="@+id/searchbtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#FF0000"
        android:backgroundTint="#000000"
        android:text="@string/buttonSrch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Phonebtn" />

    <Button
        android:id="@+id/linkbtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#FF0000"
        android:backgroundTint="#000000"
        android:text="@string/buttonWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/searchbtn" />

    <EditText
        android:id="@+id/locationSearch"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#101010"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linkedit" />

    <Button
        android:id="@+id/locationBTN"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="#FF0000"
        android:backgroundTint="#000000"
        android:text="@string/buttonLocation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/linkbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>